--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,4 +1,16 @@
 <form method="post" action="/users/signup">
+
+    <div class="col--md-4">
+        <h1>Sign up</h1>
+        {{#if hasError}}
+            <div class="alert alert-danger">
+                {{#each message}}
+                <p>{{this}}</p>
+                {{/each}}
+            </div>
+
+        {{/if}}
+    </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
