--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
 
 
@@ -24,9 +24,17 @@
                     <i class="fas fa-user"> </i>  User Management
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">User acoount</a>
-                    <a class="dropdown-item" href="#">Logout</a>
-                    <div class="dropdown-divider"></div>
+                    {{#if login}}
+                        <a class="dropdown-item" href="/users/profile">User acoount</a>
+                        <a class="dropdown-item" href="/users/logout">Logout</a>
+                        <div class="dropdown-divider"></div>
+                        {{ else}}
+
+                        <a class="dropdown-item" href="/users/signup">Sign up</a>
+                        <a class="dropdown-item" href="/users/login">Login</a>
+                        <div class="dropdown-divider"></div>
+                    {{/if}}
+
 
                 </div>
             </li>
