--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -12,7 +12,7 @@
 
                 <div class="text-right " >
                     <divc class="price text-left">${{this.price}}</divc>
-                    <a href="#" class="btn btn-success ">Add to shoping cart</a>
+                    <a href="/addToCart/{{ this._id}}" class="btn btn-success ">Add to shoping cart</a>
                 </div>
             </div>
         </div>
