--- a/views/shop/shopingCart.hbs
+++ b/views/shop/shopingCart.hbs
@@ -32,7 +32,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-6 col-md-6" >
-            <button type="button" class="btn btn-primary">Checkout</button>
+            <a href="/checkout"  class="btn btn-primary">Checkout</a>
         </div>
     </div>
 {{else}}
